--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>SpringBootRMQSales</artifactId>
+    <artifactId>SpringSales</artifactId>
     <version>.0</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
